make: add the targets "make kind" and "make install"
Signed-off-by: Maël Valais <mael@vls.dev>

--- a/devel/addon/pebble/chart/values.yaml
+++ b/devel/addon/pebble/chart/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
-  repository: pebble
-  tag: "bazel"
+  repository: local/pebble
+  tag: local
   pullPolicy: Never
 service:
   type: ClusterIP
