add regression tests for certificate validation
Signed-off-by: Joakim Ahrlin <joakim.ahrlin@gmail.com>

--- a/test/integration/validation/BUILD.bazel
+++ b/test/integration/validation/BUILD.bazel
@@ -16,7 +16,10 @@ filegroup(
 
 go_test(
     name = "go_default_test",
-    srcs = ["certificaterequest_test.go"],
+    srcs = [
+        "certificate_test.go",
+        "certificaterequest_test.go",
+    ],
     deps = [
         "//pkg/api:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
