--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -321,6 +321,8 @@ webhook:
     # name: ""
     # Optional additional annotations to add to the controller's ServiceAccount
     # annotations: {}
+    # Optional additional labels to add to the controller's ServiceAccount
+    # labels: {}
     # Automount API credentials for a Service Account.
     automountServiceAccountToken: true
 
@@ -428,6 +430,8 @@ cainjector:
     # Optional additional annotations to add to the controller's ServiceAccount
     # annotations: {}
     # Automount API credentials for a Service Account.
+    # Optional additional labels to add to the controller's ServiceAccount
+    # labels: {}
     automountServiceAccountToken: true
 
 # This startupapicheck is a Helm post-install hook that waits for the webhook
@@ -516,3 +520,6 @@ startupapicheck:
 
     # Automount API credentials for a Service Account.
     automountServiceAccountToken: true
+
+    # Optional additional labels to add to the controller's ServiceAccount
+    # labels: {}
