e2e: rename Vault's image from vault:bazel to local/vault:local
I could have done this renaming after the Bazel removal, but I figured I
would rename this image right now.

Signed-off-by: Maël Valais <mael@vls.dev>

--- a/devel/addon/vault/BUILD.bazel
+++ b/devel/addon/vault/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")
 container_bundle(
     name = "bundle",
     images = {
-        "vault:bazel": "@com_hashicorp_vault//image",
+        "local/vault:local": "@com_hashicorp_vault//image",
     },
     tags = ["manual"],
 )
