--- a/deploy/charts/cert-manager/values.yaml
+++ b/deploy/charts/cert-manager/values.yaml
@@ -321,7 +321,7 @@ webhook:
     # name: ""
     # Optional additional annotations to add to the controller's ServiceAccount
     # annotations: {}
-    # Optional additional labels to add to the controller's ServiceAccount
+    # Optional additional labels to add to the webhook's ServiceAccount
     # labels: {}
     # Automount API credentials for a Service Account.
     automountServiceAccountToken: true
@@ -430,7 +430,7 @@ cainjector:
     # Optional additional annotations to add to the controller's ServiceAccount
     # annotations: {}
     # Automount API credentials for a Service Account.
-    # Optional additional labels to add to the controller's ServiceAccount
+    # Optional additional labels to add to the cainjector's ServiceAccount
     # labels: {}
     automountServiceAccountToken: true
 
@@ -521,5 +521,5 @@ startupapicheck:
     # Automount API credentials for a Service Account.
     automountServiceAccountToken: true
 
-    # Optional additional labels to add to the controller's ServiceAccount
+    # Optional additional labels to add to the startupapicheck's ServiceAccount
     # labels: {}
