make: e2e-setup-traefik: fix dditionalArguments -> additionalArguments
Signed-off-by: Maël Valais <mael@vls.dev>

--- a/make/config/traefik/traefik-values.yaml
+++ b/make/config/traefik/traefik-values.yaml
@@ -1,4 +1,4 @@
-dditionalArguments:
+additionalArguments:
   - --experimental.kubernetesgateway=true
   - --providers.kubernetesgateway=true
   - --providers.kubernetesgateway.namespaces=
