make: use traefik instead of contour
Contour seems to have issues with its Gateway API implementation (or the
issue comes from some unknown data race of ours). The Contour
controller, sometimes, gets stuck with "No gateway found in cache".

Signed-off-by: Maël Valais <mael@vls.dev>

--- a/devel/addon/bind/manifests/configmap.yaml
+++ b/devel/addon/bind/manifests/configmap.yaml
@@ -37,10 +37,12 @@ data:
     @	IN	NS	localhost.
     *.ingress-nginx	IN  A {SERVICE_IP_PREFIX}.15
     ingress-nginx	IN	A {SERVICE_IP_PREFIX}.15
-    *.gateway IN  A {SERVICE_IP_PREFIX}.14
-    gateway IN  A {SERVICE_IP_PREFIX}.14
+    *.contour IN  A {SERVICE_IP_PREFIX}.14
+    contour IN  A {SERVICE_IP_PREFIX}.14
     *.traefik IN  A {SERVICE_IP_PREFIX}.13
     traefik IN  A {SERVICE_IP_PREFIX}.13
+    *.haproxy IN  A {SERVICE_IP_PREFIX}.12
+    haproxy IN  A {SERVICE_IP_PREFIX}.12
 
   db.dns01.example.com: |
     ;
