Use our own implementation of github.com/miekg/dns.TsigProvider interface
To allow us to both upgrade the upstream library and keep supporting HMACMD5 as RFC2136 TSIG algorithm although it was deprecated in the upstream library

Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/pkg/issuer/acme/dns/rfc2136/BUILD.bazel
+++ b/pkg/issuer/acme/dns/rfc2136/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "provider.go",
         "rfc2136.go",
+        "tsig.go",
     ],
     importpath = "github.com/cert-manager/cert-manager/pkg/issuer/acme/dns/rfc2136",
     visibility = ["//visibility:public"],
