--- a/deploy/crds/crd-issuers.yaml
+++ b/deploy/crds/crd-issuers.yaml
@@ -412,12 +412,12 @@ spec:
                                 type: object
                                 properties:
                                   labels:
-                                    description: The labels that cert-manager will use when creating the temporary HTTPRoute needed for solving the HTTP-01 challenge. These labels must match the label selector of at least one Gateway.
+                                    description: Custom labels that you want the HTTPRoutes created by cert-manager for solving HTTP-01 challenges. Back when cert-manager supported v1alpha1, this field was used when creating the solver's HTTPRoute, and used to be how the HTTPRoute was matched to a Gateway. Since v1alpha2, the HTTPRoute is matched to a Gateway using the field parentRefs on the HTTPRoute.
                                     type: object
                                     additionalProperties:
                                       type: string
                                   parentRefs:
-                                    description: ParentRefs define the Gateways that the HTTP-01 challenges will be solvable through. See https://gateway-api.sigs.k8s.io/v1alpha2/api-types/httproute/#attaching-to-gateways
+                                    description: 'When solving an HTTP-01 challenge, cert-manager creates an HTTPRoute. cert-manager needs to know which parentRefs should be used when creating the HTTPRoute. Usually, the parentRef references a Gateway. See: https://gateway-api.sigs.k8s.io/v1alpha2/api-types/httproute/#attaching-to-gateways'
                                     type: array
                                     items:
                                       description: "ParentRef identifies an API object (usually a Gateway) that can be considered a parent of this resource (usually a route). The only kind of parent resource with \"Core\" support is Gateway. This API may be extended in the future to support additional kinds of parent resources, such as HTTPRoute. \n The API object must be valid in the cluster; the Group and Kind must be registered in the cluster for this reference to be valid. \n References to objects with invalid Group and Kind are not valid, and must be rejected by the implementation, with appropriate Conditions set on the containing object."
