--- a/pkg/controller/certificatesigningrequests/BUILD.bazel
+++ b/pkg/controller/certificatesigningrequests/BUILD.bazel
@@ -13,11 +13,13 @@ go_library(
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
+        "//pkg/apis/experimental/v1alpha1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/controller/certificatesigningrequests/util:go_default_library",
         "//pkg/issuer:go_default_library",
         "//pkg/logs:go_default_library",
+        "//pkg/util/pki:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@io_k8s_api//authorization/v1:go_default_library",
         "@io_k8s_api//certificates/v1:go_default_library",
