Adds a unit test for certificatesigningrequests sync function
Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/pkg/controller/certificatesigningrequests/BUILD.bazel
+++ b/pkg/controller/certificatesigningrequests/BUILD.bazel
@@ -38,7 +38,10 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["controller_test.go"],
+    srcs = [
+        "controller_test.go",
+        "sync_test.go",
+    ],
     embed = [":go_default_library"],
     deps = [
         "//pkg/api/util:go_default_library",
